# pcasvd

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  check.sh  pca_proj.csv  test.sh
doc/: pcasvd.doxygen
include/: colormap.h  colors.h  data.h  datafile.h  datatree.h  display.h  fixture.h  gplot.h  gplotgeneric.h  gplotparams.h  gplotspecies.h  gplotwrapper.h  main.h  options.h  optionsparser.h  pca.h  pcaresult.h  speciesdemo.h  tasks.h
include/test/fixtures/: f_common.h  f_datafile.h  f_datasets.h  f_datatree.h  f_gplot.h  f_pca.h
script/mathlab/: 0cov.m
script/matlab/: .gitignore  0cov.m  README.md  bovin.csv  bovin.m  bovinscat.csv  demo.m  gsaw.csv  gsawcat.csv  nist.csv  pcafoodhabit.m  wine.csv  winecat.csv
script/python/: Dockerfile  README.md  build.sh  clean.sh  package.json  pca_species.py  requirements.txt  run.sh  runit.sh
script/python/workspace/: corcircle.py  corcircle2.py  corrcircle.py  draweigens.py  heatmap.py  pca_species.py  scatter.py  species.csv  species.py  vfmap.py  wine.csv  wine.py
src/: data.cpp  datafile.cpp  datatree.cpp  display.cpp  glplotwrapper.cpp  gplot.cpp  gplotgeneric.cpp  gplotspecies.cpp  main.cpp  optionsparser.cpp  pca.cpp  speciesdemo.cpp
test/: CMakeLists.txt  main.cpp
test/datasets/: pcaresult.json  pcaresultsiris.json  treetest.json
test/suites/: datafile.cpp  datatree.cpp  gplot.cpp  pca.cpp
